# Physical-AI-Humanoid-Robotics-Textbook

./: .npmignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: api.py  chat.py  embedding.py  main.py  pyproject.toml  requirements.txt  retrieving.py
docs/: glossary.md  intro.md
docs/capstone-project/: evaluation-criteria.md  implementation-guide.md  project-overview.md  showcase-examples.md
docs/hardware-guides/: aws-g5-setup.md  cloud-vs-onpremise.md  latency-considerations.md
docs/module-1-ros2/: chapter-1-intro-ros2.md  chapter-2-nodes-topics.md  chapter-3-services-actions.md  chapter-4-urdf-modeling.md  chapter-5-launch-files.md  chapter-6-rclpy-bridge.md
docs/module-2-digital-twin/: chapter-1-physics-simulation.md  chapter-2-rendering-unity.md  chapter-3-sensor-simulation.md  chapter-4-sim-to-real.md
docs/module-3-nvidia-isaac/: chapter-1-isaac-sim.md  chapter-2-isaac-ros.md  chapter-3-nav2-path-planning.md  chapter-4-hardware-acceleration.md
docs/module-4-vla-humanoids/: chapter-1-voice-to-action.md  chapter-2-cognitive-planning.md  chapter-3-computer-vision.md  chapter-4-capstone-project.md
docs/setup-guides/: nvidia-isaac-setup.md  simulation-setup.md  vla-setup.md
specs/physical-ai-robotics-textbook/: plan.md  spec.md  tasks.md
src/component/: ChatWidget.js  chat.css
src/components/: ChatWidget.js
src/css/: custom.css
(+61 files in other folders)
